Another fix for top 100 page headers from overlapping

--- a/app/assets/stylesheets/grayscale.css
+++ b/app/assets/stylesheets/grayscale.css
@@ -444,5 +444,6 @@ input {
 }
 
 .top-heading {
-    overflow: inherit;
+    /*overflow: inherit;*/
+    white-space: normal;
 }
